# openfinagent

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  config.example.yaml  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  provider_request.yml
.github/workflows/: ci.yml  publish.yml
app/: globals.css  layout.tsx  page.tsx
components/site/: platform-diagram.tsx  site-architecture.tsx  site-compare.tsx  site-cta.tsx  site-features.tsx  site-footer.tsx  site-hero.tsx  site-nav.tsx  site-platform.tsx  site-providers.tsx  site-quickstart.tsx  site-roadmap.tsx  site-why.tsx
docs/: release.md
docs/providers/: overview.md
examples/: quickstart.py  sample-report-NVDA.md
finagent/: __init__.py  __main__.py  cli.py  config.py  doctor.py  mcp_server.py
finagent/providers/: __init__.py  base.py
finagent/providers/builtin/: __init__.py  fred.py  qveris.py  sample.py  sec_edgar.py  yfinance_provider.py
finagent/runtime/: __init__.py  audit.py  llm.py  registry.py  runner.py
skills/openfinagent-homepage-design/: SKILL.md
skills/openfinagent-homepage-design/agents/: openai.yaml
skills/openfinagent-homepage-design/references/: patterns.md
tests/: test_smoke.py
workflows/: demo-earnings-deep-dive.yaml  earnings-deep-dive.yaml
