[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "openfinagent"
version = "0.1.0"
description = "Open-source workspace for financial agents — bring your own data, or plug into QVeris."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "OpenFinAgent contributors" }]
keywords = ["finance", "agents", "llm", "research", "quant", "openbb", "qveris"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
  "httpx>=0.27",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "openai>=1.40",
  "yfinance>=0.2.40",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
mcp = [
  "mcp>=1.0",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
finagent = "finagent.cli:app"

[project.urls]
Homepage = "https://github.com/Leon-Drq/openfinagent"
Documentation = "https://github.com/Leon-Drq/openfinagent#readme"
Issues = "https://github.com/Leon-Drq/openfinagent/issues"

[tool.hatch.build.targets.wheel]
packages = ["finagent"]

[tool.hatch.build.targets.wheel.force-include]
"workflows" = "workflows"
"config.example.yaml" = "config.example.yaml"
".env.example" = ".env.example"

[tool.hatch.build.targets.sdist]
include = [
  "/finagent",
  "/workflows",
  "/examples",
  "/config.example.yaml",
  "/.env.example",
  "/README.md",
  "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
